--- a/app/src/main/res/layout/item_top_rated.xml
+++ b/app/src/main/res/layout/item_top_rated.xml
@@ -17,7 +17,8 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/rect_curved"
         android:backgroundTint="@color/white"
-        android:elevation="10dp">
+        android:elevation="10dp"
+        android:layout_marginBottom="5dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_course_image"
