--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -5,6 +5,11 @@
 
     <data>
 
+        <import type="android.view.View" />
+
+        <variable
+            name="movie"
+            type="com.example.moviez.app.entity.SearchItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,21 +22,22 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/actionModeSelectionCV"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:alpha="0.2"
-            app:cardBackgroundColor="@android:color/transparent"/>
+            app:cardBackgroundColor="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_movie"
+            loadImageWithGlide="@{movie.imageUrl}"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/rect_curved_left"
-            android:scaleType="fitCenter"
+            android:scaleType="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.70" />
+            app:layout_constraintGuide_percent="0.60" />
 
         <TextView
             android:id="@+id/tv_title"
@@ -53,6 +59,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
+            android:text="@{movie.title}"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -68,15 +75,16 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
+            android:text="@{movie.voteAvg}"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
+            app:drawableStartCompat="@drawable/round_star_24"
+            app:drawableTint="@color/secondaryDarkColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/guideline"
             app:layout_constraintTop_toBottomOf="@+id/tv_title"
-            tools:text="7.8"
-            app:drawableStartCompat="@drawable/round_star_24"
-            app:drawableTint="@color/secondaryDarkColor" />
+            tools:text="7.8" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
