--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,12 +7,12 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_topRated"
         android:icon="@drawable/round_star_24"
         android:title="@string/title_top_rated" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_fav"
         android:icon="@drawable/round_favorite_24"
         android:title="@string/title_favorites" />
 
