--- a/app/src/main/res/layout/item_top_rated.xml
+++ b/app/src/main/res/layout/item_top_rated.xml
@@ -21,7 +21,7 @@
         android:layout_marginBottom="5dp">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_course_image"
+            android:id="@+id/iv_movie_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:adjustViewBounds="true"
