--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.textview.MaterialTextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tv_title"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginEnd="2dp"
-    android:background="@drawable/rect_curved"
-    android:padding="10dp"
-    android:elevation="10dp"
-    android:textColor="@color/black"
-    android:backgroundTint="@color/white"
-    android:textSize="25sp"
-    android:layout_marginBottom="2dp"
-    tools:text="python" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <import type="android.view.View" />
+
+        <variable
+            name="genre"
+            type="com.example.moviez.app.entity.MovieGenreItem" />
+
+    </data>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
+        android:background="@drawable/rect_curved"
+        android:padding="10dp"
+        android:elevation="10dp"
+        android:text="@{genre.name}"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/white"
+        android:textSize="25sp"
+        android:layout_marginBottom="2dp"
+        tools:text="Comedy" />
+</layout>
