--- a/app/src/main/res/layout/item_fav.xml
+++ b/app/src/main/res/layout/item_fav.xml
@@ -53,6 +53,7 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/tv_rate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/guideline"
             app:layout_constraintTop_toTopOf="parent"
@@ -64,15 +65,16 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginEnd="10dp"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
             app:drawableStartCompat="@drawable/round_star_24"
             app:drawableTint="@color/secondaryDarkColor"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title"
             tools:text="7.8" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
