--- a/app/src/main/res/layout/item_fav_home.xml
+++ b/app/src/main/res/layout/item_fav_home.xml
@@ -31,34 +31,48 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="1.0" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_movie_name"
-            android:layout_width="0dp"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            android:orientation="horizontal"
+            android:background="@drawable/rect_curved"
+            android:backgroundTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tv_vote_avg"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="Movie name" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_vote_avg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/secondaryLightColor"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:drawableStart="@drawable/round_star_24"
-            android:drawableTint="@color/secondaryLightColor"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_movie_name"
-            android:layout_marginEnd="5dp"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_name"
-            tools:text="8.7" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_movie_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="3"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:text="Movie name" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_vote_avg"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="2"
+                android:textAlignment="center"
+                android:drawableStart="@drawable/round_star_24"
+                android:drawableTint="@color/primaryDarkColor"
+                android:textColor="@color/primaryDarkColor"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_movie_name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_movie_name"
+                tools:text="8.7" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
