--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -75,10 +75,12 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:text="@{movie.voteAvg}"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:drawableStartCompat="@drawable/round_star_24"
             app:drawableTint="@color/secondaryDarkColor"
             app:layout_constraintEnd_toEndOf="parent"
